plugins {
	id 'dev.architectury.loom'
	id 'maven-publish'
}

repositories {
	maven { url = 'https://api.modrinth.com/maven' }
	maven { url = 'https://maven.terraformersmc.com/releases/'
		content { includeGroupAndSubgroups("com.terraformersmc") }
	}
	maven { url = 'https://maven.fallenbreath.me/releases'
		content { includeGroupAndSubgroups("me.fallenbreath") }
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.mappings_version}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.fabric_loader_version}"
	implementation "com.google.code.findbugs:jsr305:3.0.2"
	implementation "org.jetbrains:annotations:24.1.0"
}

base {
	group = project.group + "." + project.mod_id
	archivesName = "malilib-common-${project.minecraft_version_out}"
	version = project.mod_version
}

loom {
	accessWidenerPath = file("src/main/resources/malilib.accesswidener")
	mixin {
		useLegacyMixinAp = true
		defaultRefmapName.set("malilib.refmap.json")
	}
}

processResources {
	exclude '**/*.xcf'
	exclude '**/xcf'
	inputs.property "mod_version", project.mod_version
}

tasks.withType(JavaCompile).configureEach {
	it.options.encoding = "UTF-8"
	it.options.release = 17
}

java {
	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
	withSourcesJar()
}

jar {
	from(rootProject.file("LICENSE")) {
		rename { "${it}_${base.archivesName}"}
	}
}

// Expose common sources for loader modules to compile directly (MultiLoader-Template pattern)
configurations {
	commonJava {
		canBeResolved = false
		canBeConsumed = true
	}
	commonResources {
		canBeResolved = false
		canBeConsumed = true
	}
}

artifacts {
	commonJava sourceSets.main.java.sourceDirectories.singleFile
	commonResources sourceSets.main.resources.sourceDirectories.singleFile
}

publishing {
	publications {
		mavenJava(MavenPublication) {
			artifactId = base.archivesName.get()
			from components.java
		}
	}
	repositories {
		maven {
			url = "${rootProject.projectDir}/CommonMaven"
		}
	}
}
